--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ NX_FAUCET_AUTH0_CLIENT_ID=auth0_client_id
 NX_FAUCET_SENTRY_DSN=example_sentry_dsn
 
 NX_STAKING_SENTRY_DSN=example_sentry_dsn
+NX_STAKING_ADDRESS=haqqval_example_address
 
 NX_GOVERNANCE_SENTRY_DSN=example_sentry_dsn
 
